# Projects

camunda-batch-monitor/: .gitignore  Batch Monitoring.py  LICENSE  ONBOARDING.html  ONBOARDING.md  README.md  build.bat  camunda-monitor.spec  pyproject.toml  requirements.txt  script run.bat
camunda-batch-monitor/config/: .env.example
camunda-batch-monitor/src/camunda_monitor/: __init__.py  __main__.py  api.py  config.py  notifier.py
camunda-batch-monitor/tests/: test_api.py  test_config.py  test_main.py  test_notifier.py
